[package]
name = "win_protocol_handler"
version = "0.1.0"
authors = ["Gaukas Wang <gaukaswang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.8"
winres = "0.1.11"
native-windows-gui = "1.0.8"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.


[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "admin"
path = "src/admin/main.rs"